hphp/test/zend/bad/Zend/tests/bug64821.3.php
<?php

class a extends exception {
	public function __construct() {
		$this->line = array();
		$this->file = NULL;
	}
}

throw new a;

?>